--- a/META.yml
+++ b/META.yml
@@ -19,15 +19,15 @@ name: App-LogStats
 provides:
   App::LogStats:
     file: lib/App/LogStats.pm
-    version: 0.07
+    version: 0.08
 requires:
   Class::Accessor::Lite: 0
   Getopt::Long: 2.38
-  IO::Interactive: 0
+  IO::Interactive::Tiny: 0
   Pod::Usage: 0
   Text::ASCIITable: 0.2
   perl: v5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/bayashi/App-LogStats
-version: 0.07
+version: 0.08
