--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ build_requires:
   Test::Exception: 0
   Test::More: 0.88
   Test::Output: 0
+  parent: 0
 configure_requires:
   Module::Build: 0.40
 dynamic_config: 1
@@ -19,7 +20,7 @@ name: App-LogStats
 provides:
   App::LogStats:
     file: lib/App/LogStats.pm
-    version: 0.082
+    version: 0.083
 requires:
   Class::Accessor::Lite: 0
   Getopt::Long: 2.38
@@ -30,4 +31,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/bayashi/App-LogStats
-version: 0.082
+version: 0.083
